Fixes switch label text.
This was broken in release 4.2.0 of antd. The temporary css fix patches
the issue until a newer version of antd gets released.

--- a/src/App.css
+++ b/src/App.css
@@ -7,6 +7,10 @@ body {
   margin-right: 1em;
 }
 
+.ant-switch .ant-switch-inner {
+  margin: 0 6px 0 24px;
+}
+
 
 .nav-menu p {
   padding: 0;
